# isaac-sim-yarp-bridge

./: .gitignore  CMakeLists.txt  README.md  pixi.toml
.github/workflows/: check-format.yml  conda-forge-ci.yml  pixi-ci.yml
conf/: isaacsim_clock.xml
conf/clock/: isaacsim_clock_ros2.xml
conf/ergocub/: ergocub_isaacsim.xml
conf/ergocub/bridge/FT/: left_arm-FT_isaacsim.xml  left_foot-FT_isaacsim.xml  left_leg-FT_isaacsim.xml  right_arm-FT_isaacsim.xml  right_foot-FT_isaacsim.xml  right_leg-FT_isaacsim.xml
conf/ergocub/bridge/inertials/: head-inertials_isaacsim.xml  waist-inertials_isaacsim.xml
conf/ergocub/bridge/motorcontrol/: head-mc_isaacsim.xml  left_arm-mc_isaacsim.xml  left_hand-mc_isaacsim.xml  left_leg-mc_isaacsim.xml  right_arm-mc_isaacsim.xml  right_hand-mc_isaacsim.xml  right_leg-mc_isaacsim.xml  torso-mc_isaacsim.xml
conf/ergocub/bridge/sensors/: realsense_isaacsim.xml
conf/ergocub/estimators/: wholebodydynamics.xml
conf/ergocub/sensors/: isaacsim_ergocub_realsense.xml
conf/ergocub/wrappers/FT/: left_arm-FT_wrapper.xml  left_foot-FT_wrapper.xml  left_leg-FT_remapper.xml  left_leg-FT_wrapper.xml  left_leg_hip-FT_wrapper.xml  right_arm-FT_wrapper.xml  right_foot-FT_wrapper.xml  right_leg-FT_remapper.xml  right_leg-FT_wrapper.xml  right_leg_hip-FT_wrapper.xml
conf/ergocub/wrappers/inertials/: alljoints-inertials_remapper.xml  alljoints-inertials_wrapper.xml  head-inertials_wrapper.xml  waist-inertials_wrapper.xml
conf/ergocub/wrappers/motorcontrol/: head-mc_wrapper.xml  left_arm-mc_remapper-coupling.xml  left_arm-mc_wrapper-coupling.xml  left_hand-coupling_handler.xml  left_hand-mc_wrapper.xml  left_leg-mc_wrapper.xml  left_upper_arm-mc_wrapper.xml  right_arm-mc_remapper-coupling.xml  right_arm-mc_wrapper-coupling.xml  right_hand-coupling_handler.xml  right_hand-mc_wrapper-coupling.xml  right_hand-mc_wrapper.xml  right_leg-mc_wrapper.xml  right_upper_arm-mc_wrapper.xml  torso-mc_wrapper.xml
conf/ergocub/wrappers/sensors/: isaacsim_ergocub_realsense_wrapper.xml  realsense_wrapper.xml
scripts/: add_realsense.py  add_usd_sensors.py  create_ros2_action_graph.py  graph_script.py  omni_control_board.py  omni_control_board_state.py  omni_read_FT.py  omni_set_joint_gains.py  omni_set_robot_efforts.py
src/: CMakeLists.txt
src/devices/: CMakeLists.txt
src/devices/isaacsim_clock_ros2/: CMakeLists.txt  IsaacSimClockROS2.cpp  IsaacSimClockROS2.h  IsaacSimClockROS2_ParamsParser.cpp  IsaacSimClockROS2_ParamsParser.h  IsaacSimClockROS2_params.md
src/devices/isaacsim_controlboard_nwc_ros2/: CMakeLists.txt  IsaacSimControlBoardNWCROS2.cpp  IsaacSimControlBoardNWCROS2.h  IsaacSimControlBoardNWCROS2_ParamsParser.cpp  IsaacSimControlBoardNWCROS2_ParamsParser.h  IsaacSimControlBoardNWCROS2_params.md
src/devices/isaacsim_multipleanalogsensors_nwc_ros2/: CMakeLists.txt  IsaacSimMultipleAnalogSensorsNWCROS2.cpp  IsaacSimMultipleAnalogSensorsNWCROS2.h  IsaacSimMultipleAnalogSensorsNWCROS2_ParamsParser.cpp  IsaacSimMultipleAnalogSensorsNWCROS2_ParamsParser.h  IsaacSimMultipleAnalogSensorsNWCROS2_params.md
src/devices/isaacsim_rgbdSensor_nwc_ros2/: CMakeLists.txt  IsaacSimRGBDSensorNWCROS2.cpp  IsaacSimRGBDSensorNWCROS2.h  IsaacSimRGBDSensorNWCROS2_ParamsParser.cpp  IsaacSimRGBDSensorNWCROS2_ParamsParser.h  IsaacSimRGBDSensorNWCROS2_params.md
tests/: CMakeLists.txt
tests/isaacsim_clock_ros2/: CMakeLists.txt  isaacsim_clock_ros2_test.cpp
tests/isaacsim_controlboard_nwc_ros2/: isaacsim_controlboard_nwc_ros2_test.cpp
tests/isaacsim_multipleanalogsensors_nwc_ros2/: CMakeLists.txt  isaacsim_multipleanalogsensors_nwc_ros2_test.cpp
tests/isaacsim_rgbdSensor_nwc_ros2/: CMakeLists.txt  isaacsim_rgbdSensor_nwc_ros2_test.cpp
